--- a/Playoffs_2-Data_Cleaning.Rmd
+++ b/Playoffs_2-Data_Cleaning.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Playoffs_2_NEW"
+title: "Playoffs 2 Data Cleaning"
 author: "Rohan Venkatraman, Yulim Kim"
 date: "2023-04-04"
 output: html_document
